--- a/day01/ex2/index.html
+++ b/day01/ex2/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Situator Web</title>
+        <title>ReactJS Workshop</title>
     </head>
     <body>
         <!-- React will inject its content here -->
