--- a/day01/ex3/index.html
+++ b/day01/ex3/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>ReactJS Workshop</title>
     </head>
     <body>
@@ -10,11 +11,15 @@
 
         <style>
             html, body {
+                width: 100%;
                 height: 100%;
                 margin: 0;
+                padding: 0;
             }
             #app{
-                height:100%;
+                position: absolute;
+                top: 0; bottom: 0; left: 0; right:0;
+                overflow: hidden;
             }
         </style>
         <!-- Main -->
